--- a/assets/css/mapa.css
+++ b/assets/css/mapa.css
@@ -1,3 +1,8 @@
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
 #map {
   width: 100%;
   height: 80%;
